--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -251,7 +251,7 @@
             </trans-unit>
             <trans-unit id="register.login.intro">
                 <source>register.login.intro</source>
-                <target>إذا كان لديك حساب مسبقا فيمكنك تسجيل الدخول بكتابة البريد الالكتروني و كلمة السر. إذا كانت هذه هي المرة الاولى اضغط هنا</target>
+                <target>إذا كان لديك حساب مسبقا فيمكنك تسجيل الدخول بكتابة البريد الالكتروني و كلمة السر.ا</target>
             </trans-unit>
             <trans-unit id="login.form.email">
                 <source>login.form.email</source>
@@ -609,10 +609,15 @@
                             الفكرة هي مساعدتك على التواصل مع أشخاص اخرين من ثقافة مغايرة لثقافتك بهدف توسيع دائرة معارفك في مجتمعك الجديد.
                         </li>
                         <li>
+                            صديق فيكاسوف تتم مطابقتك مع شخص لديه اهتمامات مشابهة لاهتماماتك 
+                            صديق موسيقى سوف تتم مطابقتك مع شخص لديه اهتمامات موسيقية و يحب الموسيقى
+                            ستارت كومبيس سوف تتم مطابقتك مع شخص للخروج في نزهة سيرا علي الاقدام للتعرف على المنطقة التي تعيشان كلاكما فيها
+                            يمكنك أن تكون ستارت كومبيس اذا كنت تعيش في ليدينغو, لينشوبينغ, نيناسهامن, سولنا, فاكسهولم و أوسترأوكر.
                             نحن نقوم بعملية المطابقة بشكل أساسي على أساس الاهتمامات المشتركة و هذا يعني أنه ممكن أن تتم المطابقة مع شخص من عمر مختلف أو جنس مختلف فإذا كان لديك شيء تريده أو تتمناه بهذا الخصوص الرجاء توضيح ذلك في طلبك لكي نحاول بدورنا تحقيق ذلك.
                         </li>
                         <li>
-                            يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو. نحن نأمل أن نستطيع أن نربط أصدقا جدد في مناطق جديدة في المستقبل.
+                            كفيكا كومبيس أو صديق موسيقى
+                            يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو. نحن نأمل أن نستطيع أن نربط أصدقا جدد في مناطق جديدة في المستقبل.                         
                         </li>
                         <li>
                             مسؤولية كومبيس بيرون محصورة بفتح اتصال بين القدامى و الجدد في السويد.
