--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -486,8 +486,7 @@
                 <source>user.settings.intro</source>
                 <target><![CDATA[
                     <p>هنا تجيب عن أسئلة تتعلق بك كشخص :كلما توسعت بالحديث عن نفسك أكثر كلما كانت الفرصة اكبر لكي نجد لك نطابق افضل, نحن نحاول إيجاد التطابق بين أشخاص ذوي أهداف متطابقة أو متكاملة ,إذا كان لديكم هدف مشترك تحاولون تحقيقه لطفا اجعل هذا واضحا في تعريفك بنفسك و نحن بدورنا سوف نرى إن كنا نستطبع استيعاب ذلك و الاستفادة منه.
-                    .يجب ان تكون قادرا على اللقاء في أحد المدن التسعة التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو, ستوكهولم, أوميو, أوبسالا, فيستروس و أوربرو.</p><br />
-
+                     كفيكا كومبيس أو صديق موسيقى  .يجب ان تكون قادرا على اللقاء في أحد المدن التسعة التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو, ستوكهولم, أوميو, أوبسالا, فيستروس و أوربرو</p><br />
                     <p>يمكنك أن تكون رفيق فيكا أو رفيق موسيقا</p>
                     <ul>
                         <li>رفيق فيكا: تتم المطابقة على أساس الاهتمامات المشتركة بين الطرفين ثم تلتقيان في مكان ما لجلسة فيكا حوالي ساعة من الوقت
@@ -629,13 +628,13 @@
                             .كل من هم فوق ال 18 عاما مرحب بهم للمشاركة
                         </li>
                         <li>
-                            التسجيل في الموقع و خدماته مجانية و لكن سوف تدفع ثمن الفيكا خاصتك عندما تخرج مع صديقك.
+                            التسجيل في الموقع و خدماته مجانية و لكن سوف تدفع ثمن الفيكا أو كلفة أي نشاطات اخرى خاصة بك عندما تخرج مع صديقك.
                         </li>
                         <li>
                             نحن ننصح باللقاء في مكان عام لحوالي الساعة من الوقت في مركز المدينة الأقرب للطرفين.
                         </li>
                         <li>
-                            عند تسجيلك الدخول فإن طلبك يجب أن يضمن صحة المعلومات التي تقدمها و يضمن موافقتك على استخدام هذه المعلومات كي نجد لك رفيقا مناسبا ثم نرسل معلوماتك و بريدك الالكتروني الى رفيقك الجديد. أيضا سوف نقوم بدعوتك لمشاركتنا المشاطات الخاصة بنا. إذا كنت تريد تغيير أو تصحيح المعلومات الخاصة بك يمكنك فعل ذلك بتسجيل الدخول ببريدك الالكتروني و كلمة السر.
+                            عند تسجيلك الدخول فإن طلبك يجب أن يضمن صحة المعلومات التي تقدمها و يضمن موافقتك على استخدام هذه المعلومات كي نجد لك رفيقا مناسبا ثم نرسل معلوماتك و بريدك الالكتروني أو رقم هاتفك الى رفيقك الجديد. أيضا سوف نقوم بدعوتك لمشاركتنا المشاطات الخاصة بنا. إذا كنت تريد تغيير أو تصحيح المعلومات الخاصة بك يمكنك فعل ذلك بتسجيل الدخول ببريدك الالكتروني و كلمة السر.
                         </li>
                         <li>
                             طموحنا هو إيجاد رفيق جديد لك خلال 30 يوم من تقديمك للطلب. هذا يعني انه عليك الانتظار.
@@ -659,7 +658,7 @@
                             نحن لا نستطيع أن نضمن كليا أن نجد لك رفيقا جديدا لكن نحن نضمن لك أننا نفعل ما بوسعنا.
                         </li>
                         <li>
-                            نحن نريد دوما أن نكون أفضل فيما نفعله لذلك سوف نرسل لك بريدا الكترونيا نسألك فيه كيف جرت الأمور و كيف كان اللقاء.
+                            نحن نريد دوما أن نكون أفضل فيما نفعله لذلك سوف نرسل لك بريدا الكترونياأو نتصل بك لنسألك كيف جرت الأمور و كيف كان اللقاء.
                         </li>
                         
                         شاكرين لكم قراءتكم لشروطنا وموافقتكم عليها.
