--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -501,7 +501,7 @@
             </trans-unit>
             <trans-unit id="index.intro">
                 <source>index.intro</source>
-                <target>هنا يمكنك التقدم بطلب للتعرف على رفيق فيكا او موسيقى. اضغط على زر "رفيق فيكا " من فضلك.
+                <target>هنا يمكنك التقدم بطلب للتعرف على رفيق فيكا او موسيقى أو ستارت كومبيس. اضغط على زر "رفيق فيكا " من فضلك.
                 يمكنك رؤية أضدقائك القدامى و الحالة الراهنة أيضا
 
                     إذا كنت تريد تغيير شيء في طلبك يمكنك الضغط على " حسابي الشخصي" ثم قائمة أعدادات.</target>
@@ -529,7 +529,7 @@
             <trans-unit id="index.again.intro">
                 <source>index.again.intro</source>
                 <target>
-                    أذا كنت تريد أن تلتقي برفيق فيكا أو رفيق موسيقى جديد عليك باختيار المدينة التي تستطيع اللقاء فيها و اضغط على الزر "رفيق فيكا"
+                     أذا كنت تريد أن تلتقي برفيق فيكا أو رفيق موسيقى أو ستارت كومبيس جديد عليك باختيار المدينة التي تستطيع اللقاء فيها و اضغط على الزرارسال الطلب 
                 </target>
             </trans-unit>
             <trans-unit id="connection_request.form.city">
