--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -835,7 +835,29 @@
                     Om du har några frågor, vänligen skicka ett email till oss :)<br><br>
 
                     Bästa hälsningar<br>
-                    Vi på Kompisbyrån
+                    Vi på Kompisbyrån<br><br>
+
+                    -----English-----
+                    Hello!
+
+                    Thank you for your registration as Start friend (Startkompis)! With this email, we are confirming that we have received your application.<br><br> 
+
+                    We will contact you again when we have found a person who matches your profile. You get the person's contact information and we propose a date, time and place of your meeting. (If you need to complete your application, we will let you know.)<br><br>
+
+                    Best regard,<br>
+                    Kompisbyrån<br><br>
+
+                    -----العربية-----
+
+                    مرحباً!
+                    شكراً لتسجيلك في(صديق البداية)مع هذا البريد الإلكتروني نود أن نؤكد أننا تلقينا طلبك.<br><br>
+                    هنا تذكير قصير كيف سيكون ذلك:<br><br>
+                    ١.التطابق .سوف نرسل لك رسالة بالبريد الالكتروني (عادة في غضون ١-٣٠ يوم) عندما نجد الشخص الذي يتطابق مع الملف الخاص بك. سوف تحصل  على معلومات للإتصال بالشخص و سوف  نقترح تاريخ ووقت ومكان للاجتماع (إذا كنا بحاجة لاستكمال طلبك، سوف نقوم بإعلامك)
+                    عليك الانتظار حتى نتواصل معك من جديد و نخبرك بما يتوجب عليك فعله
+
+                    إذا كان لديك أية أسئلة، يرجى إرسال بريد إلكتروني إلينا!
+                    أطيب التمنيات<br>
+                    كومبس بيرون<br><br>
                     </p>
                 ]]></target>
             </trans-unit>
