--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1030,7 +1030,7 @@ Your friends at Kompisbyrån
                             Vi vill gärna ge dig ett personligt gåvobevis som tack - maila kontakt@kompisbyran.se så skickar vi över det!
                         </p>
                         <p>
-                            Vi berättar mer än gärna om hur du kan stötta Kompisbyrån på olika vis - kontakta emma@kompisbyran.se eller cecilia@kompisbyran.se.
+                            Vi berättar mer än gärna om hur du kan stötta Kompisbyrån på olika vis - kontakta emma@kompisbyran.se eller kontakt@kompisbyran.se.
                         </p>
                         <p>
                             Stort tack för att du vill vara med och göra skillnad.
@@ -1113,10 +1113,9 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
-                            Cecilia Holmgren, grundare
-                            <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare<br>
-                             Emma Hammar, grundare och verksamhetsledare<a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare<a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare<a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Cecilia Holmgren, grundare<br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
                             Hedda Grew, ambassadör Linköping<br>
@@ -1138,20 +1137,20 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            Frågor om matchningen?<br>
+                            Frågor om Fikakompis eller Musikkompis?<br>
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Jönköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Linköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
                             Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
-                            Umeå: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Västerås: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
-
-                            Frågor om samarbete, rekrytering eller press: kontakta <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
+                            Övriga städer: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+    
+                            Frågor om Startkompis: start@kompisbyran.se
+                
+                            Frågor om samarbete, rekrytering eller press: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
                             
-                            Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
+                            Frågor om event: event@kompisbyran.se
+                            
+                            Övriga frågor: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
                         </p>
                     ]]>
                 </target>
