--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -962,7 +962,7 @@ Your friends at Kompisbyrån
                         </p>
                         <p>
                             We are more than happy to speak with you about how you can support Kompisbyrån in several ways. Please don’t 
-                            hesitate to contact: emma@kompisbyran.se.
+                            hesitate to contact: emma@kompisbyran.se or kontakt@kompisbyran.se.
                         </p>
                         <p>
                             Many thanks to you all who are involved and really make a difference! 
@@ -1037,10 +1037,9 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>We are Kompisbyrån</h4>
                         <p>
-                            Cecilia Holmgren, grundare
-                            <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare<br>
-                             Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare<a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Cecilia Holmgren, grundare<br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
                             Hedda Grew, ambassadör Linköping<br>
@@ -1073,6 +1072,10 @@ Your friends at Kompisbyrån
                             <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>
 
                             Questions about collaborations, recruitment or press, please contact: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> or <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
+
+                            Questions about events: event@kompisbyran.se
+
+                            Other questions: kontakt@kompisbyran.se
                         </p>
                     ]]>
                 </target>
