--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -944,7 +944,7 @@ Your friends at Kompisbyrån
                             نود أن نرسل لك بطاقة شكر شخصية. الرجاء مراسلتنا على kontakt@kompisbyran.se
                         </p>
                         <p>
-                            يمكننا بسرور أن نقدم تفاصيل أكثر عن كيفية دعمنا بطرق مختلفة... تواصل معنا على emma@kompisbyran.se أو cecilia@kompisbyran.se
+                            يمكننا بسرور أن نقدم تفاصيل أكثر عن كيفية دعمنا بطرق مختلفة... تواصل معنا على emma@kompisbyran.se أو kontakt@kompisbyran.se
                         </p>
                         <p>
                             شكرا جزيلا لأنك تريد أن تكون معنا لنحدث فرقا 
@@ -998,10 +998,9 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>نحن كعاملين في كومبيس بيرون</h4>
                         <p>
-                            Cecilia Holmgren, grundare
-                            <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare<br>
-                             Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare<a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Cecilia Holmgren, grundare<br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
                             Hedda Grew, ambassadör Linköping<br>
@@ -1033,9 +1032,13 @@ Your friends at Kompisbyrån
                             أوبسالا <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             أوريبرو <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
 
+                            Frågor om Startkompis: <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>
+
                             متنوع <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
 
-                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> أو <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
+                            Frågor om event: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a><br>
+
+                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> أو <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
                         </p>
                     ]]>
                 </target>
