--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -837,7 +837,7 @@
                     Bästa hälsningar<br>
                     Vi på Kompisbyrån<br><br>
 
-                    -----English-----
+                    -----English-----<br>
                     Hello!
 
                     Thank you for your registration as Start friend (Startkompis)! With this email, we are confirming that we have received your application.<br><br> 
@@ -847,15 +847,15 @@
                     Best regard,<br>
                     Kompisbyrån<br><br>
 
-                    -----العربية-----
+                    -----العربية-----<br>
 
                     مرحباً!
                     شكراً لتسجيلك في(صديق البداية)مع هذا البريد الإلكتروني نود أن نؤكد أننا تلقينا طلبك.<br><br>
                     هنا تذكير قصير كيف سيكون ذلك:<br><br>
-                    ١.التطابق .سوف نرسل لك رسالة بالبريد الالكتروني (عادة في غضون ١-٣٠ يوم) عندما نجد الشخص الذي يتطابق مع الملف الخاص بك. سوف تحصل  على معلومات للإتصال بالشخص و سوف  نقترح تاريخ ووقت ومكان للاجتماع (إذا كنا بحاجة لاستكمال طلبك، سوف نقوم بإعلامك)
-                    عليك الانتظار حتى نتواصل معك من جديد و نخبرك بما يتوجب عليك فعله
+                    ١.التطابق .سوف نرسل لك رسالة بالبريد الالكتروني (عادة في غضون ١-٣٠ يوم) عندما نجد الشخص الذي يتطابق مع الملف الخاص بك. سوف تحصل  على معلومات للإتصال بالشخص و سوف  نقترح تاريخ ووقت ومكان للاجتماع (إذا كنا بحاجة لاستكمال طلبك، سوف نقوم بإعلامك)<br>
+                    عليك الانتظار حتى نتواصل معك من جديد و نخبرك بما يتوجب عليك فعله<br>
 
-                    إذا كان لديك أية أسئلة، يرجى إرسال بريد إلكتروني إلينا!
+                    إذا كان لديك أية أسئلة، يرجى إرسال بريد إلكتروني إلينا!<br>
                     أطيب التمنيات<br>
                     كومبس بيرون<br><br>
                     </p>
